--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,13 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-  <google-plus-signin clientid="735680481775-osl4350j9njmbc6qge6gc4fmb0b2d7am"></google-plus-signin>
-</div>
-
-<div class="row marketing">
-  <google-map></google-map>
+<button class="signin-button" ng-click="vm.signin()">
+  <span class="signin-button__icon"></span>
+  <span class="signin-button__text">Sign in with Google</span>
+</button>
+<!--  <google-map></google-map>-->
+<div class="file-list">
+  <div class="file-list__item" ng-repeat="file in vm.files">
+    <span class="file-list__item__name">{{file.name}}</span>
+    <span class="file-list__item__size">{{file.quotaBytesUsed}}</span>
+    <span class="file-list__item__last-view">{{vm.parseDate(file.viewedByMeTime)}}</span>
+    <button ng-click="vm.deleteFile(file.id)">Delete</button>
+  </div>
 </div>
