--- a/app/styles/fileList.scss
+++ b/app/styles/fileList.scss
@@ -1,19 +1,50 @@
 .file-list {
+  max-width: auto;
+  flex: 1 1 auto;
+  margin: 0 auto;
   &__item {
-    padding: 6px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    background-color: #fff;
+    padding: 6px 12px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
+    flex-direction: row;
+    align-items: center;
     &__name {
       flex: 1 1 40%;
       max-width: 40%;
+      line-height: 1.2rem;
     }
     &__size {
       flex: 1 1 15%;
       max-width: 15%;
     }
     &__last-view {
-      flex: 1 1 25%;
-      max-width: 25%;
+      flex: 1 1 18%;
+      max-width: 18%;
+    }
+    &__trash {
+      flex: 1 1 15%;
+      max-width: 15%;
+    }
+    &--header {
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      height: 30px;
+      background-color: map-get($gapps-color, 'primary');
+      color: rgba(255, 255, 255, 0.87);
+    }
+    &.ng-leave {
+      transition: all 0.4s map-get($transition, 'button');
+    }
+    &.ng-leave.ng-leave-active {
+      opacity: 0;
+      //transform: scale(1, 0);
+      max-height: 0;
+    }
+    &.ng-leave {
+      opacity: 1;
+      //transform: scale(1, 1);
+      max-height: 30px;
     }
   }
 }
