--- a/app/styles/signinButton.scss
+++ b/app/styles/signinButton.scss
@@ -1,12 +1,16 @@
 .signin-button {
-  display: inline-block;
+  display: inline-flex;
+  align-items: stretch;
   background: #fff;
-  color: #444;
+  color: #fff;
+  letter-spacing: 0px;
   width: 190px;
   height: 46px;
+  padding: 0;
   border-radius: 5px;
-  border: none;
+  border: 1px solid #508EF3;
   box-shadow: 0px 1px 2px rgba(0,0,0,0.25);
+  box-sizing: content-box;
   white-space: nowrap;
   transition: box-shadow 0.4s map-get($transition, 'button'), transform 0.4s map-get($transition, 'button');
   &:hover {
@@ -28,13 +32,16 @@
     vertical-align: middle;
     background: url('../images/g-favicon.png') transparent 50% 50% no-repeat;
     background-size: contain;
+    margin: 13px;
   }
   &__text {
-    display: inline-block;
-    vertical-align: middle;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1 1 auto;
     font-size: 14px;
     font-weight: bold;
-    padding-left: 20px;
+    background: #508EF3;
     /* Use the Roboto font that is loaded in the <head> */
     font-family: 'Roboto', sans-serif;
   }
