--- a/app/styles/_fileList.scss
+++ b/app/styles/_fileList.scss
@@ -6,9 +6,7 @@
     background-color: #fff;
     padding: 6px 12px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    @include flex-center;
     &__name {
       flex: 1 1 40%;
       max-width: 40%;
@@ -31,20 +29,17 @@
       border-top-right-radius: 5px;
       height: 30px;
       background-color: map-get($gapps-color, 'primary');
-      color: rgba(255, 255, 255, 0.87);
+      color: map-get($txt-color, 'light');
     }
     &.ng-leave {
+      opacity: 1;
       transition: all 0.4s map-get($transition, 'button');
+      max-height: 30px;
     }
     &.ng-leave.ng-leave-active {
       opacity: 0;
       //transform: scale(1, 0);
       max-height: 0;
-    }
-    &.ng-leave {
-      opacity: 1;
-      //transform: scale(1, 1);
-      max-height: 30px;
     }
   }
 }
