--- a/app/styles/_login.scss
+++ b/app/styles/_login.scss
@@ -1,11 +1,8 @@
 .login {
   flex: 1 1 auto;
-  max-height: 100%;
-  max-width: 100%;
+  @include fill-parent;
   background-color: map-get($gapps-color, 'bg-dark');
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center;
   &__modal {
     background-color: map-get($gapps-color, 'bg-light');
     padding: 40px;
