--- a/app/styles/_percentChart.scss
+++ b/app/styles/_percentChart.scss
@@ -1,6 +1,5 @@
 percent-chart {
   width: 100%;
-  height: 100%;
   min-width: 400px;
   position: relative;
   margin: 1rem auto;
@@ -20,7 +19,7 @@ percent-chart {
     &__title {
       font-size: 1rem;
       font-weight: 400;
-      color: rgba(0, 0, 0, 0.87);
+      color: map-get($txt-color, 'dark');
     }
   }
 }
