--- a/app/styles/_signinButton.scss
+++ b/app/styles/_signinButton.scss
@@ -1,3 +1,8 @@
+@mixin button-shadow($level) {
+  box-shadow: 0px $level 2*$level rgba(0,0,0,0.25);
+  transform: translate(0, -$level);
+}
+
 .signin-button {
   display: inline-flex;
   align-items: stretch;
@@ -9,21 +14,19 @@
   padding: 0;
   border-radius: 5px;
   border: 1px solid #508EF3;
-  box-shadow: 0px 1px 2px rgba(0,0,0,0.25);
+  @include button-shadow(1px);
   box-sizing: content-box;
   white-space: nowrap;
   transition: box-shadow 0.4s map-get($transition, 'button'), transform 0.4s map-get($transition, 'button');
   &:hover {
     cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.25);
-    transform: translate(0, -2px);
+    @include button-shadow(2px);
   }
   &:focus {
     outline: none;
   }
   &:active {
-    box-shadow: 0 4px 8px rgba(0,0,0,0.25);
-    transform: translate(0, -4px);
+    @include button-shadow(4px);
   }
   &__icon {
     width: 20px;
